Update L1.2 - Development: Javascript.md
strings

--- a/Week 1/L1.2 - Development: Javascript.md
+++ b/Week 1/L1.2 - Development: Javascript.md
@@ -40,3 +40,21 @@ console.log("Hello!");
 ```
 Note: `"` and `'` are equivalent
 
+Strings
+-
+Concatenation
+```
+et sentence = 'My';
+sentence = sentence + ' name is';
+sentence += ' Pikachu';
+
+console.log(sentence);
+```
+Interpolation (use literals to mix variables & expressions into strings)
+```
+const age = 7;
+const fullname = 'Yuchao';
+const phrase = `Hello! My name is ${fullname} and I am ${age}`;
+
+console.log(phrase);
+```
