Update L1.2 - Development: Javascript.md
fixed strings
added control structures

--- a/Week 1/L1.2 - Development: Javascript.md
+++ b/Week 1/L1.2 - Development: Javascript.md
@@ -44,7 +44,7 @@ Strings
 -
 Concatenation
 ```
-et sentence = 'My';
+let sentence = 'My';
 sentence = sentence + ' name is';
 sentence += ' Pikachu';
 
@@ -58,3 +58,32 @@ const phrase = `Hello! My name is ${fullname} and I am ${age}`;
 
 console.log(phrase);
 ```
+
+Control Structures
+-
+The `if`, `else if`, `else`, `while`, and `for` are the same as C
+```
+const number = 5;
+if (number > 10) {
+console.log('Bigger than 10');
+} else if (number < 2) {
+// Do nothing
+} else {
+console.log('Number between 2 and 9');
+}
+
+console.log('--------------------------');
+
+let i = 0;
+while (i < 5) {
+console.log('Hello there');
+i += 1;
+}
+
+console.log('--------------------------');
+
+for (let i = 0; i < 5; i++) {
+console.log('Hello there');
+}
+```
+Note: for the `for` loop, we changed `int i` to `let i`. 
