--- a/Week 1/L1.2 - Development: Javascript.md
+++ b/Week 1/L1.2 - Development: Javascript.md
@@ -65,25 +65,38 @@ The `if`, `else if`, `else`, `while`, and `for` are the same as C
 ```
 const number = 5;
 if (number > 10) {
-console.log('Bigger than 10');
+  console.log('Bigger than 10');
 } else if (number < 2) {
-// Do nothing
+  // Do nothing
 } else {
-console.log('Number between 2 and 9');
+  console.log('Number between 2 and 9');
 }
 
 console.log('--------------------------');
 
 let i = 0;
 while (i < 5) {
-console.log('Hello there');
-i += 1;
+  console.log('Hello there');
+  i += 1;
 }
 
 console.log('--------------------------');
 
 for (let i = 0; i < 5; i++) {
-console.log('Hello there');
+  console.log('Hello there');
 }
 ```
 Note: for the `for` loop, we changed `int i` to `let i`. 
+
+Functions
+-
+Very similar to C; uses `function` instead of the return type.
+```
+function minimum(a, b) {
+  if (a > b) {
+    return b;
+  } else {
+    return a;
+  }
+}
+```
