Update L1.2 - Development: Javascript.md
collections

--- a/Week 1/L1.2 - Development: Javascript.md
+++ b/Week 1/L1.2 - Development: Javascript.md
@@ -100,3 +100,23 @@ function minimum(a, b) {
   }
 }
 ```
+
+Data Structures: Collections
+-
+Collections of data are either:
+- sequential collections
+- associative collections
+
+Sequential Collections
+- values referenced by their integer index (key) that represents their location in an order
+- represented by an `array` in Javascript
+
+Associative Collections
+- values referenced by their string key that maps to a value; no inherit sense of order
+- similar to a `struct` in C
+
+Arrays
+-
+
+Objects
+-
