Update L1.2 - Development: Javascript.md
for in and for out loops

--- a/Week 1/L1.2 - Development: Javascript.md
+++ b/Week 1/L1.2 - Development: Javascript.md
@@ -117,6 +117,62 @@ Associative Collections
 
 Arrays
 -
+- dynamic
+- hold different data types
+Example
+```
+const names = ['Hayden', 1, 'Darcy','Giuliana'];
+
+console.log(`1 ${names}`);     // 1 Hayden,1,Darcy,Giuliana
+console.log(`2 ${names[0]}`);  // 2 Hayden
+names[1] = 'Yuchao';
+names.push('Rani');
+console.log(`3 ${names}`);     // 3 Hayden,Yuchao,Darcy,Giuliana,Rani
+
+console.log(names.length);     // 5
+```
+Note: Javascript has `methods` and .push() is an array method.  
+  
+Iteration
+```
+const items = ['a', 'b', 'c', 'd', 'e'];
+
+let i = 0;
+while (i < 5) {
+  console.log(items[i]);
+  i++;
+}
+
+for (let j = 0; j < 5; j++) {
+ console.log(items[j]);
+}
+
+for (let k = 0; k < items.length; k++) {
+ console.log(items[k]);
+}
+```
+Thoughts: I think the third way is my favourite!  
+
+For In Loop vs For Of Loop
+```
+const items = ['a', 'b', 'c', 'd', 'e'];
+
+// prints 0, 1, 2, 3, 4
+for (const i in items) {
+  console.log(items[i]);
+}
+
+// prints a, b, c, d, e
+for (const item of items) {
+  console.log(item);
+}
+
+// prints true
+console.log(items.includes('c'));
+```
+Note:
+- For In statement loops through array properties
+- For Out statement loops through array values
 
 Objects
--
+- 
