Update L1.1 - Other: Course_Structure.md
SE def

--- a/Week 1/L1.1 - Other: Course_Structure.md
+++ b/Week 1/L1.1 - Other: Course_Structure.md
@@ -1,7 +1,8 @@
 Computer Science vs Software Engineering
 -
 Computer science: understanding how computers work and function; making a computer do things.  
-Software engineering: building the right software for the right people, and making sure it's maintainable over time as it grows and people working on it change.
+Software engineering: building the right software for the right people, and making sure it's maintainable over time as it grows and people working on it change.  
+In other words: SE is the area of CS that makes things for people to use
 
 IEEE Definition of Software Engineering
 -
