Update L1.2 - Development: Javascript.md
lecture done!

--- a/Week 1/L1.2 - Development: Javascript.md
+++ b/Week 1/L1.2 - Development: Javascript.md
@@ -119,6 +119,7 @@ Arrays
 -
 - dynamic
 - hold different data types
+- also a variable
 Example
 ```
 const names = ['Hayden', 1, 'Darcy','Giuliana'];
@@ -176,3 +177,155 @@ Note:
 
 Objects
 - 
+- also a variable
+- common practice to declare objects with `const`
+- associative structure
+- object = data type that contains:
+  - 0 or more properties (attributes)
+  - 0 or more functions (methods)  
+  
+Objectives used when I have a collection of items identified by string description rather than a numerical index (arrays)
+```
+const student = {
+  name: 'Emily',
+  score: 99,
+  rank: 1,
+};
+
+console.log(student);
+console.log(student.name);
+console.log(student.score);
+console.log(student.rank);
+
+student.height = 159;
+console.log(student);
+```
+
+Create & Populate Ojects - populating after creating object:
+```
+const userData = {};
+userData.name = 'Sally';
+userData.age = 18;
+userData.height = '187cm';
+console.log(userData);
+```
+Create & Populate Ojects - populate and create at the same time:
+```
+const userData = {
+  name: 'Sally',
+  age: 18,
+  height: '187cm',
+};
+console.log(userData);
+```
+Note: both cases print `{ name: 'Sally', age: 18, height:'187cm' }`
+
+Alternative syntax with assigning:
+```
+userData.prop = 1;
+userData['prop'] = 1;
+```
+
+Using `Object` function to get various properties of an object
+```
+const userData = {
+  name: 'Sally',
+  age: 18,
+  height: '187cm',
+};
+
+const keys = Object.keys(userData);
+const entries = Object.entries(userData);
+const values = Object.values(userData);
+
+console.log(keys);
+console.log(entries);
+console.log(values);
+```
+Output:
+```
+[ 'name', 'age', 'height' ]
+[ [ 'name', 'Sally' ], [ 'age', 18 ], [ 'height', '187cm' ] ]
+[ 'Sally' , 18, '187cm' ]
+```
+
+Array is an Object
+-
+- in Javascript, almost everything is an object
+- this includes arrays
+
+
+```
+const userData = [
+  {
+    name: 'Sally',
+    age: 18,
+    height: '186cm',
+  }, {
+      name: 'Bob',
+      age: 17,
+      height: '188cm',
+    },
+];
+// Returns an array of the object's
+// own enumerable property names.
+const keys = Object.keys(userData);
+console.log(keys);
+
+// Returns an array of the object's own
+// enumerable property [key, value] pairs.
+const entries = Object.entries(userData);
+console.log(entries);
+
+// Returns an array of the object's own
+// enumerable property values.
+const values = Object.values(userData);
+```
+
+Using a `For` loop to display all items in an object:
+```
+const userData = [
+  {
+    name: 'Sally',
+    age: 18,
+    height: '186cm',
+  }, {
+    name: 'Bob',
+    age: 17,
+    height: '188cm',
+  },
+];
+
+for (let i = 0; i < userData.length; i++) {
+  console.log(`${userData[i].name}'s properties are:`);
+  console.log(` name: ${userData[i].name}`);
+  console.log(` age: ${userData[i].age}`);
+  console.log(` height: ${userData[i].height}`);
+}
+```
+
+Combining everything into one example:
+```
+const student1 = { name: 'Yuchao', score: 50 };
+const student2 = { name: 'Rani', score: 91 };
+const student3 = { name: 'Hayden', score: 99 };
+const students = [student1, student2, student3];
+
+console.log(students);
+
+// Approach 1
+const numStudents = students.length;
+for (let i = 0; i < numStudents; i++) {
+  const student = students[i];
+  if (student.score >= 85) {
+    console.log(`${student.name} got an HD`);
+  }
+}
+// Approach 2
+for (const student of students) {
+  if (student.score >= 85) {
+    console.log(`${student.name} got an HD`);
+  }
+}
+```
+Node: this should print out all students with a HD
