Update L1.3 & L1.4 - Git.md

--- a/Week 1/L1.3 & L1.4 - Git.md
+++ b/Week 1/L1.3 & L1.4 - Git.md
@@ -3,7 +3,13 @@ Needs that Git solves:
 - version control: tracks changes to our code over time systematically (like a log book)
 - concurrent programming: many people can work on same files
 
-Git - Importance of git add:
+Importance of git add:
+-
 - we can separate completed files from incomplete files for a commit
 - we can separate completed files from each other for more concisely documented, separated commits
 - `git reset <file>` to unadd a file, or just `git reset` to unadd all files
+
+Conflicts
+-
+- I can't `push` if a remote change occurred after I cloned/pulled
+- to solve this, I must `pull` the most recent version, resolve the conflict in my local code, and then push again
