Update and rename L1.3 & L1.4 - Git.md to L1.3 - Git: Solo.md

--- a/Week 1/L1.3 - Git: Solo.md
+++ b/Week 1/L1.3 - Git: Solo.md
@@ -8,8 +8,10 @@ Importance of git add:
 - we can separate completed files from incomplete files for a commit
 - we can separate completed files from each other for more concisely documented, separated commits
 - `git reset <file>` to unadd a file, or just `git reset` to unadd all files
+- interesting note: if we do `git add .` we add all files with changes to staging
 
 Conflicts
 -
 - I can't `push` if a remote change occurred after I cloned/pulled
 - to solve this, I must `pull` the most recent version, resolve the conflict in my local code, and then push again
+- sometimes, if a conflict can be resolved very easily (e.g. adding a new line of console.log), git is powerful enough to automatically resolve the conflict
