Update L1.4 - Git: Team.md

--- a/Week 1/L1.4 - Git: Team.md
+++ b/Week 1/L1.4 - Git: Team.md
@@ -1,1 +1,24 @@
+Branching Purpose:
+-
+- allows us to test changes on a copy of the main version to see if it works before we publish the feature
 
+Branching Commands:
+-
+- `git branch` shows the branches in the project
+- `git checkout -b <new branch name>` creates and changes us to a new branch
+- `git checkout <branch name>` changes us to an existing different branch
+- `git merge master` merges my current branch 
+- `git log` shows the change history
+- in `git status`, you can also check which branch you current are on
+
+Upstream Branch Issue:
+-
+- we can commit as much as we want onto the non-main branch
+- however we can't `push`, because the remote repo doesn't know we are working on a non-main branch, and thinks we are pushing onto the main branch
+- resolve with `git push origin <branch name>` to push onto that branch instead of the main branch
+- similarly, we can `git pull origin <branch name>` to pull from a specific branch instead of the main branch
+
+Non-main Branch:
+-
+- to push, we must create a `merge request` which is asking to put the changes on the non-main branch into the main branch
+- after I make the merge request, I want another team member to review it 
