Update L1.1 - Working_as_a_Team.md

--- a/Week 2/L1.1 - Working_as_a_Team.md
+++ b/Week 2/L1.1 - Working_as_a_Team.md
@@ -31,3 +31,8 @@ Improve Technical Skills
 - try it yourself and then ask for help: don't stay stuck for too long
 - read other people's code; be proactive in learning from others
 - practice makes better, perfect is an illusion; done > perfect, something > nothing
+
+Definition of Completion
+-
+- what does finished mean?
+- ensure team agrees what finished means early on to avoid miscommunication
