Update L1.4 - Git: Team.md

--- a/Week 1/L1.4 - Git: Team.md
+++ b/Week 1/L1.4 - Git: Team.md
@@ -9,7 +9,7 @@ Branching Commands:
 - `git checkout <branch name>` changes us to an existing different branch
 - `git merge master` merges my current branch 
 - `git log` shows the change history
-- in `git status`, you can also check which branch you current are on
+- `git status` checks which branch you're currently are on
 
 Upstream Branch Issue:
 -
