Update L2.2 - Package_management_and_Multifile_and_Importing.md

--- a/Week 2/L2.2 - Package_management_and_Multifile_and_Importing.md
+++ b/Week 2/L2.2 - Package_management_and_Multifile_and_Importing.md
@@ -1,1 +1,10 @@
-
+Lecture Objectives
+-
+Why?
+- to utilise javascript fully, we can install other modules that aren't on our system
+- manage installations on multi-user projects  
+What?
+- problems with packages
+- NPM and how it works
+- manage packages
+- custom scripts
