Update L1.4 - Git: Team.md

--- a/Week 1/L1.4 - Git: Team.md
+++ b/Week 1/L1.4 - Git: Team.md
@@ -22,3 +22,7 @@ Non-main Branch:
 -
 - to push, we must create a `merge request` which is asking to put the changes on the non-main branch into the main branch
 - after I make the merge request, I want another team member to review it 
+
+Side Tip:
+-
+- remember to always `git pull` before starting/continuing on a project
