Update L3.1 - Verification .md

--- a/Week 3/L3.1 - Verification .md
+++ b/Week 3/L3.1 - Verification .md
@@ -1,3 +1,20 @@
+Software Testing
+-
+- concept:
+  - process of evaluating & verifying a software does what it's supposed to do
+  - note: testing shows presence, not absence, of bugs
+- purposes:
+  - prevent bugs; show correctness in my program
+  - reduce development costs; prevent regression as code change over time (e.g. when refactoring)
+  - improve performance
+- types of verification:
+  - dynamic verification
+    - testing whilst executing code
+    - also called run-time checks
+  - static verification
+    - testing before executing code
+    - also called compile-time checks
+
 Software Safety
 -
 - commonly confused terms:
@@ -19,10 +36,6 @@ Dynamic Verification
 - concept
   - IRL, bad things happen to programs all the time, e.g. invalid input and unexpected data
   - dynamic test: make program more robust in face of real and inevitable errors in a running program
-  - testing:
-    - help show correctness in my program
-    - prevent regression as my code changes over time; e.g. when refactoring
-    - testing shows presence, not absence, of bugs
 - unit testing:
   - testing individual components in isolation
   - often just testing a particular function
