Update L3.2 - Data Interchange .md

--- a/Week 3/L3.2 - Data Interchange .md
+++ b/Week 3/L3.2 - Data Interchange .md
@@ -1,1 +1,75 @@
+Standard Interface
+-
+- concept:
+  - universal method of connecting different systems together
+  - e.g. USB-C ports, soft drink can sizes
+- data interchange format:
+  - standard interface in data
+  - transfer & store data between different applications
+  - solution to problems like sharing a C program output with a JS program
+  - main 3 examples:
+    - JSON (the most commonly used one IRL)
+    - YAML
+    - XML
 
+JSON (Javascript Object Notation)
+-
+- concept:
+  - very similar to Javascript, except:
+    - no trailing commas
+    - object keys must be strings and include apostrophes
+    - example:
+    ```
+    {
+      "locations": [
+        {
+          "suburb" : "Kensington",
+          "postcode" : 2033
+        },
+        {
+          "suburb" : "Mascot",
+          "postcode" : 2020
+        },
+        {
+          "suburb" : "Sydney CBD",
+          "postcode" : 2000
+        }
+      ]
+    }
+    ```
+  - most languages have built-in or libraries to write & read JSON
+  - most of the time, these libs convert between JS-based data structure and a stringifed / text-based dump of JSON
+- usage:
+  - JS -> JSON
+  ```
+  import fs from 'fs';
+
+  const DATA_STRUCTURE = {
+    names: [
+      {
+        first: 'Bob',
+        last: 'Carr',
+      },
+      {
+        first: 'Julia',
+        last: 'Gillard',
+      },
+      {
+        first: 'Ken',
+        last: 'Henry',
+      },
+    ],
+  };
+  
+  const data = JSON.stringify(DATA_STRUCTURE);
+  fs.writeFileSync('export.json', data, { flag: 'w' });
+  ```
+  - JSON -> JS
+  ```
+  mport fs from 'fs';
+  
+  const json = fs.readFileSync('export.json', { flag: 'r' });
+  const data = JSON.parse(json);
+  console.log(data);
+  ```
+  
