Update L3.2 - Data Interchange .md

--- a/Week 3/L3.2 - Data Interchange .md
+++ b/Week 3/L3.2 - Data Interchange .md
@@ -6,7 +6,7 @@ Standard Interface
 - data interchange format:
   - standard interface in data
   - transfer & store data between different applications
-  - solution to problems like sharing a C program output with a JS program
+  - it's a solution to problems like sharing a C program output with a JS program
   - main 3 examples:
     - JSON (the most commonly used one IRL)
     - YAML
@@ -19,57 +19,102 @@ JSON (Javascript Object Notation)
     - no trailing commas
     - object keys must be strings and include apostrophes
     - example:
-    ```
-    {
-      "locations": [
-        {
-          "suburb" : "Kensington",
-          "postcode" : 2033
-        },
-        {
-          "suburb" : "Mascot",
-          "postcode" : 2020
-        },
-        {
-          "suburb" : "Sydney CBD",
-          "postcode" : 2000
-        }
-      ]
-    }
-    ```
+      ```
+      {
+        "locations": [
+          {
+            "suburb" : "Kensington",
+            "postcode" : 2033
+          },
+          {
+            "suburb" : "Mascot",
+            "postcode" : 2020
+          },
+          {
+            "suburb" : "Sydney CBD",
+            "postcode" : 2000
+          }
+        ]
+      }
+      ```
   - most languages have built-in or libraries to write & read JSON
   - most of the time, these libs convert between JS-based data structure and a stringifed / text-based dump of JSON
 - usage:
   - JS -> JSON
-  ```
-  import fs from 'fs';
-
-  const DATA_STRUCTURE = {
-    names: [
-      {
-        first: 'Bob',
-        last: 'Carr',
-      },
-      {
-        first: 'Julia',
-        last: 'Gillard',
-      },
-      {
-        first: 'Ken',
-        last: 'Henry',
-      },
-    ],
-  };
+    ```
+    import fs from 'fs';
   
-  const data = JSON.stringify(DATA_STRUCTURE);
-  fs.writeFileSync('export.json', data, { flag: 'w' });
-  ```
+    const DATA_STRUCTURE = {
+      names: [
+        {
+          first: 'Bob',
+          last: 'Carr',
+        },
+        {
+          first: 'Julia',
+          last: 'Gillard',
+        },
+        {
+          first: 'Ken',
+          last: 'Henry',
+        },
+      ],
+    };
+    
+    const data = JSON.stringify(DATA_STRUCTURE);
+    fs.writeFileSync('export.json', data, { flag: 'w' });
+    ```
   - JSON -> JS
-  ```
-  mport fs from 'fs';
+    ```
+    mport fs from 'fs';
+    
+    const json = fs.readFileSync('export.json', { flag: 'r' });
+    const data = JSON.parse(json);
+    console.log(data);
+    ```
   
-  const json = fs.readFileSync('export.json', { flag: 'r' });
-  const data = JSON.parse(json);
-  console.log(data);
-  ```
-  
+YAML (YAML Ain't Markup Language)
+-
+- concept:
+  - unlike JS, indentation matters
+  - dash used to begin a list
+  - very common for configurations
+  - example:
+    ```
+    ---
+    locations:
+    - suburb: Kensington
+      postcode: 2033
+    - suburb: Mascot
+      postcode: 2020
+    - suburb: Sydney CBD
+      postcode: 2000
+    ```
+
+XML (eXtensible Markup Language)
+-
+- legacy interchange format; declining use
+- concept:
+  - more verbose (harder to read at glance)
+  - more demanding to process/interpret
+  - more bytes required to store (due to open/closing tags)
+  - example:
+    ```
+    <?xml version="1.0" encoding="UTF-8"?>
+    <root>
+        <locations>
+            <element>
+                <postcode>2033</postcode>
+                <suburb>Kensington</suburb>
+            </element>
+            <element>
+                <postcode>2020</postcode>
+                <suburb>Mascot</suburb>
+            </element>
+            <element>
+                <postcode>2000</postcode>
+                <suburb>Sydney CBD</suburb>
+            </element>
+        </locations>
+    </root>
+    ```
