Update L3.2 - Data Interchange .md

--- a/Week 3/L3.2 - Data Interchange .md
+++ b/Week 3/L3.2 - Data Interchange .md
@@ -18,25 +18,30 @@ JSON (Javascript Object Notation)
   - very similar to Javascript, except:
     - no trailing commas
     - object keys must be strings and include apostrophes
-    - example:
-      ```
-      {
-        "locations": [
-          {
-            "suburb" : "Kensington",
-            "postcode" : 2033
-          },
-          {
-            "suburb" : "Mascot",
-            "postcode" : 2020
-          },
-          {
-            "suburb" : "Sydney CBD",
-            "postcode" : 2000
-          }
-        ]
-      }
-      ```
+  - example:
+    ```
+    import fs from 'fs';
+
+    const DATA_STRUCTURE = {
+      names: [
+        {
+          first: 'Bob',
+          last: 'Carr',
+        },
+        {
+          first: 'Julia',
+          last: 'Gillard',
+        },
+        {
+          first: 'Ken',
+          last: 'Henry',
+        },
+      ],
+    };
+    
+    const data = JSON.stringify(DATA_STRUCTURE);
+    fs.writeFileSync('export.json', data, { flag: 'w' });
+    ```
   - most languages have built-in or libraries to write & read JSON
   - most of the time, these libs convert between JS-based data structure and a stringifed / text-based dump of JSON
 - usage:
