--- a/Week 3/L3.1 - Verification .md
+++ b/Week 3/L3.1 - Verification .md
@@ -64,6 +64,12 @@ Automating Dynamic Verification
   - running jest:
     - add `"test": "jest"` to our package.json
     - run `npm run test` in terminal
+  - functions (commonly used):
+    ```
+    test -> wraps a test
+    expect -> true to pass
+    toStrictEqual -> compare function ouput to expected output
+    ```
   - sample structure:
     ```
     import { removeVowels } from './jest_lib';
