Update L3.1 - Verification .md

--- a/Week 3/L3.1 - Verification .md
+++ b/Week 3/L3.1 - Verification .md
@@ -65,11 +65,9 @@ Automating Dynamic Verification
     - add `"test": "jest"` to our package.json
     - run `npm run test` in terminal
   - functions (commonly used):
-    ```
-    test -> wraps a test
-    expect -> true to pass
-    toStrictEqual -> compare function ouput to expected output
-    ```
+    - `test` -> wraps a test
+    - `expect` -> true to pass
+    - `toStrictEqual` -> compare function ouput to expected output
   - sample structure:
     ```
     import { removeVowels } from './jest_lib';
