Update L3.3 - Static Verification .md

--- a/Week 3/L3.3 - Static Verification .md
+++ b/Week 3/L3.3 - Static Verification .md
@@ -1,1 +1,66 @@
+Risk & Software Safety
+-
+- concept:
+  - protect threat to my software; often the biggest threat is myself (I'm the one who makes mistakes)
+  - shift left: errors earlier > errors later
+- types of errors:
+  - `compile` errors: code failed to compile because missing `;` in code
+  - `runtime` errors: code threw an exception because divided by 0
+  - `logic` errors: code ran but gave wrong answer
 
+Dynamic vs Static Verification
+-
+- concept:
+  - dynamic: execute code to verify
+  - static: don't have to execute code to verify
+- dynamic:
+  - Jest tests
+  - manually running code and checking inputs/outputs
+- static:
+  - compiling C code (run GCC type checker)
+  - SAST (Static Analysis Security Testing) - analyses code for vulnerabilities
+
+Static Verification
+-
+- concept:
+  - make code mathematically verifiable; into a mathematical model
+- processes:
+  - prove code by hand: code will be completely bug free
+  - mix of manual/atuomated: e.g. seL4 (COMP9242) - a verified microkernel
+- issue & solution:
+  - proving code correctness formally via math models is very expensive!
+  - solution: `proxy` to verify correctness since all code has `types`
+  - `type checking`: verify types present in a program
+  - if type checking:
+    - passes: program may or may not be correct
+    - fails: progress definitely incorrect
+- type systems:
+  - most programming languages have a type system
+    - e.g. C, JS, TS, Java, Python
+    - languages without type systems are Shell, Assembly, Visual Basic, and older languages
+  - `statically typed` language:
+    - type checking at compilation
+    - programmer declares variable types
+    - stronger & weaker type systems (only in statically typed):
+      - depends on level of enforcement of types
+      - C: statically typed with a weak type system (types must be declare and GCC run type checking)
+  - `dynamically typed` language:
+    - type checking at runtime
+    - programmer doesn't annotate types
+
+TypeScript
+-
+- concept:
+  - like an older sister of JS, where types are declared
+  - it's not an actual language, but an extension of JS
+- process:
+  - installation: 
+    `npm install --save-dev typescript ts-node`
+  - run command:
+    `node_modules/.bin/ts-node <file name>.ts`
+  - alternative, more strict run command (type check without running)
+    `node_modules/.bin/tsc --noImplicitAny <file name>.ts`
+- since TS is not an actual language, we need a TS interpreter
+  - add `"tsc": "node_modules/.bin/tsc"` to `"scripts"` in `package.json`
+  - when TS is run, it creates a JS version of the same file
+  - i.e. we write in TS to make static verification of JS easier
