Update L3.4 - Continuous Integration .md

--- a/Week 3/L3.4 - Continuous Integration .md
+++ b/Week 3/L3.4 - Continuous Integration .md
@@ -1,1 +1,16 @@
-
+Continuous Integration (CI)
+-
+- TLDR: merging all changes from programmers into one place
+  - we put tests into the repo so any code merged in has to pass the tests
+- why/ in a nutshell: risk!
+  - automates layers of quality checks (testing, type checking, linting) on code
+  - ensures that master/main remains a safe source of truth
+  - provides quality assurance
+  - CI is run in a standardised environment
+  - minimises risk by continuously integrating small changes, rather than making lots of changes at once
+- minimising risk with CI
+  - minimise risk by continuously integrating small changes, rather than making lots of changes at once
+  - generally, the more lines changed, the greater the risk
+    - more accurately: the more areas of the code that your change impacts, the greater the risk (e.g. CrowdStrike)
+  - Nick's (Atlassian guest speaker) advice for merge requests / pull requests
+  - keep them as small as possible - if in doubt, split it up
