Update L4.2 - Advanced Functions .md

--- a/Week 4/L4.2 - Advanced Functions .md
+++ b/Week 4/L4.2 - Advanced Functions .md
@@ -1,1 +1,92 @@
+Contents
+-
+- functon syntax
+- first-class functions
+- higher order functions
+- callbacks
 
+Function Syntax
+-
+- let's begin with something simple
+  - original code
+    ```
+    const sum = (a: number, b: number) => {
+      return a + b;
+    }
+    ```
+  - simplified code into one line for cleaner syntax; drop curly braces
+    ```
+    const sum = (a: number, b: number) => a + b;
+    ```
+- now, something more complex to see a greater impact
+  - original code
+    ```
+    function manyString(repeat: number, str: string) {
+      let outString = '';
+      for (let i = 0; i < repeat; i++) {
+          outString += str;
+      }
+      return outString;
+    } 
+    console.log(manyString(5, 'hello '));
+    ```
+  - simplified code
+    ```
+    const manyString(repeat: number, str: string) => {
+      let outString = '';
+      for (let i = 0; i < repeat; i++) {
+          outString += str;
+      }
+      return outString;
+    }
+    console.log(manyString(5, 'hello '));
+    ```
+
+First Class Functions
+-
+- let's try a print function
+  - original code
+    ```
+    const name = 'Hayden';
+    console.log(name);
+    ```
+  - function definition
+    ```
+    const getName = () => {
+      return 'Hayden';
+    };
+    console.log(getName);
+    ```
+- concept:
+  - a language has first-class functions when functions are treated just like any other variable
+  - most notably, functions can be passed into functions just like variables can
+- let's try formating a string
+  ```
+  // this is a typescript thing
+  type Fmtr = (str: string) => string;
+
+  const brackets = (str: string) => `(${str})`;
+  
+  const fullstop = (str: string) => `${str}.`;
+
+  // this simplified function is borderline getting too long
+  // so it might be worth keeping the braces if it's any longer
+  const sayHi = (name: string, format: Fmtr) => `Hello, ${format(name)}!`;
+  
+  const result = 
+      sayHi('Hayden', brackets) +
+      ' -- ' +
+      sayHi('Hayden', fullstop);
+  
+  console.log(result);
+  ```
+- there are a lot more examples in the lecture slides; review them if I want to, but the general idea should be clear here
+- first-class functions also allow for anonymous functions
+  - function is only used once
+  - therefore no point naming it
+- summary
+  - first-class functions predominantly used in terms of letting functions take in other functions as arguments
+  - allows us to create more concise and clear code
+  - particularly, enable use of anonymous functions for one-off usage
+    - make code more compact for readability
+  - also, is fundamental part of understanding callbacks 
