Update L4.2 - Advanced Functions .md

--- a/Week 4/L4.2 - Advanced Functions .md
+++ b/Week 4/L4.2 - Advanced Functions .md
@@ -89,4 +89,76 @@ First Class Functions
   - allows us to create more concise and clear code
   - particularly, enable use of anonymous functions for one-off usage
     - make code more compact for readability
-  - also, is fundamental part of understanding callbacks 
+  - also, is fundamental part of understanding callbacks
+
+Map, Reduce, Filter
+-
+- concept
+  - `map`, `reduce`, and `filter` are array functions that help us accomplish basic iterative tasks without overhead of a loop structure
+  - based on ideas of first-class functions and anonymous functions
+  - map: modify array
+  - filter: select from array
+  - reduce: summarise array
+- map
+  - take array of size N, produce new array of same size having modified each element according to a function passed in
+  - code exmaple:
+    ```
+    const tutors = [
+    'Simon',
+    'Teresa',
+    'Kaiqi',
+    'Michelle',
+    ];
+    
+    const shout = function(str: string) => `${str.toUpperCase()}!!!`;
+    
+    const newList = tutors.map(shout);
+    console.log(newList);
+    ```
+- filter
+  - take array of size N, produce new array of size 0..N without modifying any data
+  - code example:
+    ```
+    const marks = [65, 72, 81, 40, 56];
+    
+    const newList = marks.filter((mark: number) => mark >= 50);
+    console.log(newList);
+    ```
+- reduce
+  - executes a reducer function (that you provide) on each member of the array resulting in a single output value
+  - Hayden: reduce is not as commonly used as map and filter
+  - code example:
+    ```
+    type Student = {
+        name: string;
+        mark: number;
+    }
+    
+    const students: Student[] = [
+        { name: 'Amy', mark: 55 },
+        { name: 'Bob', mark: 43 },
+        { name: 'Cap', mark: 34 },
+        { name: 'Dex', mark: 23 },
+    ];
+    
+    const sum = (prev: number, curr: Student) => prev + curr.mark;
+    
+    const single = students.reduce(sum, 0);
+    console.log(single);
+    ```
+- combining all 3 functions!
+  ```
+  const marks = [39, 43.2, 48.6, 24, 33.6]; // marks out of 60
+  console.log(marks);
+  const normalisedMarks = marks.map(m => 100 * m / 60);
+  console.log(normalisedMarks);
+  const passingMarks = normalisedMarks.filter(m => m >= 50);
+  console.log(passingMarks);
+  const total = passingMarks.reduce((a, b) => a + b, 0);
+  console.log(total);
+  const average = total / passingMarks.length;
+  console.log(average);
+  ```
+
+Callbacks
+-
