Update L4.2 - Advanced Functions .md

--- a/Week 4/L4.2 - Advanced Functions .md
+++ b/Week 4/L4.2 - Advanced Functions .md
@@ -160,5 +160,12 @@ Map, Reduce, Filter
   console.log(average);
   ```
 
+Higher Order Functions
+-
+- concept
+  - functions that return functions
+  - think of them like mini function factorise
+  - 
+
 Callbacks
 -
